@@ -1,0 +1,10 @@
+<%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
+<%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
+<f:view>
+    <h:form id="testForm">
+        <h:selectOneMenu id="selone_menu_colors">
+        </h:selectOneMenu>
+
+        <h:commandButton id="submit" value="Submit"/>
+    </h:form>
+</f:view>
